--- a/apps/salea-frontend/.docker/Dockerfile
+++ b/apps/salea-frontend/.docker/Dockerfile
@@ -19,7 +19,7 @@ RUN \
     rm -rf /etc/nginx/conf.d/*
 
 COPY $APP_SOURCE_DIRECTORY/dist "/usr/share/nginx/html$APP_TARGET_DIRECTORY"
-COPY .src/main/docker/3000-vite.conf /etc/nginx/conf.d/3000.conf
+COPY $APP_SOURCE_DIRECTORY/.docker/3000-vite.conf /etc/nginx/conf.d/3000.conf
 
 COPY --chmod=0755 $APP_SOURCE_DIRECTORY/.docker/env.sh /docker-entrypoint.d/env.sh
 
