--- a/apps/salea-frontend/tsconfig.json
+++ b/apps/salea-frontend/tsconfig.json
@@ -16,7 +16,7 @@
     "noUnusedLocals": false,
     "strictNullChecks": false,
     "target": "es6",
-    "lib": ["dom", "es6"],
+    "lib": ["dom", "esnext"],
     "jsx": "react",
   }
 }
