--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
   },
   "devDependencies": {
     "@monorepo/eslint-prettier-config": "*",
-    "eslint": "^8.57.0",
-    "turbo": "^2.4.4",
     "corepack": "^0.32.0",
+    "eslint": "^8.57.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "ts-jest": "^29.2.6"
+    "ts-jest": "^29.2.6",
+    "turbo": "^2.4.4"
   },
   "packageManager": "npm@10.8.2",
   "nodeLinker": "node-modules",
@@ -47,5 +47,8 @@
   ],
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "@hubspot/api-client": "^12.1.0"
   }
 }
