Refactor HubSpot OAuth scopes by separating required and optional scopes for improved configuration

--- a/apps/hubspot-service/.k8s/kubernetes.yaml
+++ b/apps/hubspot-service/.k8s/kubernetes.yaml
@@ -137,7 +137,9 @@ items:
                 - name: "CLIENT_SECRET"
                   value: "gcp:secretmanager:$INT_SERVICE_NAME-CLIENT_SECRET"
                 - name: "SCOPES"
-                  value: "crm.objects.companies.read crm.objects.companies.write crm.objects.contacts.read crm.objects.contacts.write crm.objects.deals.read crm.objects.deals.write files"
+                  value: "crm.objects.companies.read"
+                - name: "OPTIONAL_SCOPES"
+                  value: "crm.objects.companies.write crm.objects.contacts.read crm.objects.contacts.write crm.objects.deals.read crm.objects.deals.write files"
                 - name: "REDIRECT_URI"
                   value: "https://sales.allo.restaurant/auth/callback"
                 - name: "FRONTEND_URL"
