--- a/apps/hubspot-ui/package.json
+++ b/apps/hubspot-ui/package.json
@@ -64,6 +64,7 @@
     "lucide-react": "^0.462.0",
     "multer": "^1.4.5-lts.2",
     "next-themes": "^0.3.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
