--- a/apps/hubspot-service/package.json
+++ b/apps/hubspot-service/package.json
@@ -18,7 +18,8 @@
         "express-session": "^1.17.1",
         "form-data": "^4.0.0",
         "multer": "^1.4.2",
-        "node-fetch": "^2.6.1"
+        "node-fetch": "^2.6.1",
+        "node-cache": "^5.1.2"
     },
     "devDependencies": {
         "webpack": "^5.99.8",
