--- a/apps/hubspot-service/package.json
+++ b/apps/hubspot-service/package.json
@@ -18,13 +18,13 @@
         "express-session": "^1.17.1",
         "form-data": "^4.0.0",
         "multer": "^1.4.2",
-        "node-fetch": "^2.6.1",
-        "node-cache": "^5.1.2"
+        "node-cache": "^5.1.2",
+        "node-fetch": "^2.6.1"
     },
     "devDependencies": {
+        "nodemon": "^2.0.7",
         "webpack": "^5.99.8",
-        "webpack-cli": "^6.0.1",
-        "nodemon": "^2.0.7"
+        "webpack-cli": "^6.0.1"
     },
     "author": "",
     "license": "ISC"
