--- a/apps/hubspot-ui/package.json
+++ b/apps/hubspot-ui/package.json
@@ -99,7 +99,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.18",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "vite-plugin-pwa": "^0.16.3"
   },
   "description": "## Project info",
   "main": "eslint.config.js",
