--- a/apps/hubspot-ui/package.json
+++ b/apps/hubspot-ui/package.json
@@ -94,12 +94,13 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
+    "node-cache": "^5.1.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.18",
-    "node-cache": "^5.1.2"
+    "vite-plugin-pwa": "^1.0.0"
   },
   "description": "## Project info",
   "main": "eslint.config.js",
