google calendar integration

--- a/apps/hubspot-service/.k8s/kubernetes.yaml
+++ b/apps/hubspot-service/.k8s/kubernetes.yaml
@@ -146,6 +146,14 @@ items:
                   value: "https://sales.allo.restaurant/dashboard"
                 - name: "HUBSPOT_TOKEN"
                   value: "gcp:secretmanager:$INT_SERVICE_NAME-HUBSPOT_TOKEN"
+                - name: "GOOGLE_SCOPES"
+                  value: "https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/calendar.events"
+                - name: "GOOGLE_REDIRECT_URI"
+                  value: "https://sales.allo.restaurant/auth/google/callback"
+                - name: "GOOGLE_CLIENT_ID"
+                  value: "gcp:secretmanager:$INT_SERVICE_NAME-GOOGLE_CLIENT_ID"
+                - name: "GOOGLE_CLIENT_SECRET"
+                  value: "gcp:secretmanager:$INT_SERVICE_NAME-GOOGLE_CLIENT_SECRET"
               image: "$INT_SERVICE_IMAGE"
               imagePullPolicy: "IfNotPresent"
               name: "$INT_SERVICE_NAME"
