--- a/apps/hubspot-service/package.json
+++ b/apps/hubspot-service/package.json
@@ -10,6 +10,7 @@
         "prod": "PORT=3000 node dist/server.js"
     },
     "dependencies": {
+        "@google-cloud/local-auth": "^2.1.0",
         "@hubspot/api-client": "^12.1.0",
         "axios": "^0.21.1",
         "cors": "^2.8.5",
@@ -17,6 +18,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "form-data": "^4.0.0",
+        "googleapis": "^105.0.0",
         "multer": "^1.4.2",
         "node-cache": "^5.1.2",
         "node-fetch": "^2.6.1"
